Archive2/64/12fd8c9def6e02/output
main.cpp:12:51: error: invalid use of incomplete type 'class Numbers2'
         friend void Numbers2::getNumbers(Numbers &);
                                                   ^
main.cpp:4:11: error: forward declaration of 'class Numbers2'
     class Numbers2;
           ^
main.cpp: In member function 'void Numbers2::getNumbers(Numbers&)':
main.cpp:9:13: error: 'int Numbers::num' is private
         int num;
             ^
main.cpp:25:27: error: within this context
             cout << numbs.num << endl;
                           ^
